# Contract-Sweeper

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: highergov-fetch.yml  production-guard.yml  tests-smoke.yml  tests.yml
contract_sweeper/: __init__.py
contract_sweeper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contract_sweeper/governance/: __init__.py  source_registry.py
contract_sweeper/sources/: __init__.py
data/: source_registry.yaml
data/bench/: bench_norm_1000.csv  (+6 more)
docs/: evidence_contract.yaml  phase_ledger.md  production_promotion_guard.yaml
reports/: current_status.json  pr2_5_sam_parent_resolution_report.md  pr2_6_entity_gate_recalibration_report.md  task_branch_integration_audit.json  task_branch_integration_audit.md  task_register.json  task_register.md
scripts/: analyze_entity_profiles.py  auto_download.py  build_financial_flows_master.py  build_unified_master.py  cms_mapper.py  config.py  deduplicate_master.py  dominance_analysis.py  download_instructions.py  download_subawards.py  emma_mapper.py  fdic_mapper.py  fetch_federal_account_backbone.py  fetch_pr_contracts_backbone.py  fetch_pr_grants_backbone.py  fetch_pr_subawards_backbone.py  generate_source_coverage_actuals.py  ingest_hud_drgr_exports.py  link_fema_pa_to_contracts.py  link_hud_drgr_to_assets.py  network_graph.py  normalize_expansion_inputs.py  parent_collapse.py  parse_highergov_pdfs.py  run_production_promotion_guard.py  run_production_status_gate.py  run_smoke_tests.sh  run_source_registry_audit.py  sam_enrichment.py  setup_directories.py  setup_env.sh  test_all_downloads.py  validate_downloads.py  validate_expansion_coverage.py  validate_hud_drgr_coverage.py  validation_gates.py
tests/: conftest.py  test_analyze_entity_profiles.py  test_analyze_fec_crossref.py  test_analyze_lobbying_crossref.py  test_analyze_power_network.py  test_analyze_prime_sub.py  test_auto_download_helpers.py  test_build_financial_flows_master.py  test_build_unified_master.py  test_cms_mapper.py  test_config.py  test_config_extended.py  test_core_helpers.py  test_deduplicate_master.py  test_dominance_analysis.py  test_download_aafaf.py  test_download_act60.py  test_download_active_contractors.py  test_download_cabilderos.py  test_download_cdbg_dr.py  test_download_compras.py  test_download_contralor.py  test_download_cor3.py  test_download_doe.py  test_download_doj_grants.py  test_download_dot.py  test_download_earmarks.py  test_download_ed.py  test_download_emma.py  test_download_eqb.py  test_download_exim.py  test_download_fec.py  test_download_fema.py  test_download_fhlb.py  test_download_fsrs.py  test_download_grants.py  test_download_haf.py  test_download_hhs.py  test_download_hud.py  test_download_hud_drgr_public.py  (+69 more)
venv_check/: pyvenv.cfg
(+15 files in other folders)
