[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-sweeper"
version = "0.1.0"
description = "Puerto Rico Federal Contracts Data Pipeline — automated acquisition, validation, normalization, and coverage analysis of federal procurement data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
# Find any packages if present; exclude tests and virtualenvs
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*","venv*",".venv*","venv_check*","venv_test*"]

